[gd_scene load_steps=7 format=3 uid="uid://c84pr2d7wo5wu"]

[ext_resource type="Script" path="res://maps/board/global/Audio/sound_fx.gd" id="1_bkbqa"]
[ext_resource type="AudioStream" uid="uid://cn3oju7qqp643" path="res://assets/cards/audio/hover_click01.wav" id="2_28erh"]
[ext_resource type="AudioStream" uid="uid://x435g0kdrjne" path="res://assets/cards/audio/card_in01.wav" id="3_o38nr"]
[ext_resource type="AudioStream" uid="uid://bq255wqssnxuf" path="res://assets/cards/audio/card_in02.wav" id="4_f4iaf"]
[ext_resource type="AudioStream" uid="uid://d2dh5bussqh2h" path="res://assets/cards/audio/card_out01.wav" id="5_u4pdh"]
[ext_resource type="AudioStream" uid="uid://d3ie4gfhomi5f" path="res://assets/cards/audio/card_out02.wav" id="6_cwt58"]

[node name="SoundFx" type="Node"]
script = ExtResource("1_bkbqa")

[node name="hover_click01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_28erh")

[node name="card_in01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_o38nr")

[node name="card_in02" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_f4iaf")

[node name="card_out01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u4pdh")

[node name="card_out02" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cwt58")
