extends Node


# Called when the node enters the scene tree for the first time.
func hover_click_hand():
	$hover_click01.play()


func card_in01_hand():
	$card_in01.play()


func card_in02_hand():
	$card_in02.play()


func card_out01_hand():
	$card_out01.play()


func card_out02_hand():
	$card_out02.play()
